[package]
name = "sqlx-pg-quickstart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version = "0.6.2", features = ["runtime-tokio-rustls", "postgres"]}
tokio = { version = "1", features = ["full"] }
